k8s/nextjs-app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nextjs-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80 
      name: http
      protocol: HTTP
    hosts:
    - "*" 
  - port: # <---- HTTPSの設定
      number: 443
      name: https 
      protocol: HTTPS 
    hosts:
    - "*" # <----- Gatewayが HTTPS port 443を受け入れるホスト名
    tls:
      mode: SIMPLE
      credentialName: gateway-cert
